--- a/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="ipad10_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -20,29 +20,32 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcomeScreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="Gbv-U8-g9W">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="8Of-10-mg8">
-                                <rect key="frame" x="127.5" y="40" width="119" height="20"/>
+                                <rect key="frame" x="357.5" y="40" width="119" height="20"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GO ALL IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yxf-8c-Oix">
-                                <rect key="frame" x="67.5" y="145" width="239.5" height="66"/>
+                                <rect key="frame" x="297" y="145" width="240" height="66"/>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="48"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Find a team in your city &amp; dominate the league" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3wR-Xu-ai0">
-                                <rect key="frame" x="65" y="295" width="249" height="64"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find a team in your city &amp; dominate the league" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3wR-Xu-ai0">
+                                <rect key="frame" x="63" y="295" width="712" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="ArM-QN-IiZ"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yhe-SW-YVa" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
-                                <rect key="frame" x="26" y="597" width="323" height="50"/>
+                                <rect key="frame" x="26" y="1042" width="782" height="50"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.3938924921383648" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="rAJ-MV-8Ee"/>
@@ -53,7 +56,7 @@
                                 </state>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON GOING ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CHz-52-jjo">
-                                <rect key="frame" x="78.5" y="211" width="218" height="30.5"/>
+                                <rect key="frame" x="308" y="211" width="218" height="31"/>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="22"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -64,12 +67,13 @@
                             <constraint firstItem="CHz-52-jjo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2Iv-pq-rNw"/>
                             <constraint firstItem="yxf-8c-Oix" firstAttribute="top" secondItem="8Of-10-mg8" secondAttribute="bottom" constant="85" id="6fj-Rw-zi0"/>
                             <constraint firstItem="8Of-10-mg8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="93r-SN-XFW"/>
-                            <constraint firstItem="3wR-Xu-ai0" firstAttribute="top" secondItem="CHz-52-jjo" secondAttribute="bottom" constant="53.5" id="BQp-d5-St2"/>
+                            <constraint firstItem="3wR-Xu-ai0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="63" id="DUW-SO-yVd"/>
                             <constraint firstItem="Gbv-U8-g9W" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="EoI-jf-z9I"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Yhe-SW-YVa" secondAttribute="trailing" constant="26" id="La3-i8-CRJ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Yhe-SW-YVa" secondAttribute="bottom" constant="20" id="MmZ-CO-QZz"/>
                             <constraint firstItem="Yhe-SW-YVa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="26" id="P1A-4e-MWh"/>
-                            <constraint firstItem="3wR-Xu-ai0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XGU-C4-x7k"/>
+                            <constraint firstItem="3wR-Xu-ai0" firstAttribute="top" secondItem="CHz-52-jjo" secondAttribute="bottom" constant="53" id="Vmi-3m-8vc"/>
+                            <constraint firstItem="3wR-Xu-ai0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="2" id="XGU-C4-x7k"/>
                             <constraint firstItem="Gbv-U8-g9W" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="XQM-lT-4fV"/>
                             <constraint firstItem="yxf-8c-Oix" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xbt-wE-ar0"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Yhe-SW-YVa" secondAttribute="bottom" constant="20" id="dAq-X0-Iqk"/>
